--- a/style.css
+++ b/style.css
@@ -1,15 +1,3 @@
-/**********************************************************************************
-
-       .__          __         .__    ____                     .__     
-______ |  | _____ _/  |________|  |__/_   |______  ______ ____ |  |__  
-\____ \|  | \__  \\   __\___   /  |  \|   \_  __ \/  ___// ___\|  |  \ 
-|  |_> >  |__/ __ \|  |  /    /|   Y  \   ||  | \/\___ \\  \___|   Y  \
-|   __/|____(____  /__| /_____ \___|  /___||__|  /____  >\___  >___|  / .ch
-|__|             \/           \/    \/                \/     \/  
-
-**********************************************************************************/
-
-
 @font-face {
     font-family: 'Socialico';
     src: url(fonts/Socialico.otf) format('otf'),
@@ -198,11 +186,7 @@ box-shadow:         2px 2px 5px rgba(50, 50, 50, 0.75);
     }
 .social a:hover {opacity: 0.8;}
 
-/*---------------------------------------------------------------------
-
-	Boxes
-
-*/
+/*Boxes*/
 
 .box2, .box3 { 
     display: inline-block;
@@ -302,11 +286,7 @@ span.portfolio-label {
 }
 
 
-/*---------------------------------------------------------------------
-
-	Tables
-
-*/
+/* Tables */
 
 table {
 	width: 100%;
@@ -364,11 +344,7 @@ input[type=text]:hover, input[type=text]:focus, input[type=password]:hover, inpu
 	border: 1px solid #009600;
 }
 
-/*---------------------------------------------------------------------
-
-	Swipe.js - Javascript Slider
-	
-*/
+/* Swipe.js - Javascript Slider */
 
 .swipe { 
     margin: 1em 0;     
